--- a/.artroll/config/app.toml
+++ b/.artroll/config/app.toml
@@ -21,8 +21,8 @@ query-gas-limit = "0"
 pruning = "nothing"
 
 # These are applied if and only if the pruning strategy is custom.
-# pruning-keep-recent = "2"
-# pruning-interval = "10"
+pruning-keep-recent = "0"
+pruning-interval = "0"
 
 # HaltHeight contains a non-zero block height at which a node will gracefully
 # halt and shutdown that can be used to assist upgrades and testing.
@@ -99,7 +99,7 @@ enable-hostname-label = false
 enable-service-label = false
 
 # PrometheusRetentionTime, when positive, enables a Prometheus metrics sink.
-prometheus-retention-time  = 1000000000000
+prometheus-retention-time = 1000000000000
 
 # GlobalLabels defines a global set of name/value label tuples applied to all
 # metrics emitted using the wrapper functions defined in telemetry package.
@@ -133,7 +133,7 @@ enable = true
 swagger = false
 
 # Address defines the API server to listen on.
-address = "tcp://0.0.0.0:1317"
+address = "tcp://localhost:1317"
 
 # MaxOpenConnections defines the number of maximum open connections.
 max-open-connections = 1000
@@ -191,7 +191,7 @@ enable = true
 
 # snapshot-interval specifies the block interval at which local state sync snapshots are
 # taken (0 to disable).
-snapshot-interval = 2000
+snapshot-interval = 0
 
 # snapshot-keep-recent specifies the number of recent snapshots to keep and serve (0 to keep all).
 snapshot-keep-recent = 2
@@ -262,7 +262,7 @@ enable = true
 address = "0.0.0.0:8545"
 
 # Address defines the EVM WebSocket server address to bind to.
-ws-address = "0.0.0.0:8546"
+ws-address = "127.0.0.1:8546"
 
 # API defines a list of JSON-RPC namespaces that should be enabled
 # Example: "eth,txpool,personal,net,debug,web3"
@@ -331,3 +331,11 @@ key-path = ""
 [aspect]
 apply-pool-size = 0
 query-pool-size = 0
+
+[oracle]
+enabled = "true"
+oracle_address = "localhost:8080"
+client_timeout = "250ms"
+metrics_enabled = "true"
+interval = "1500ms"
+price_ttl = "10s"
