--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,8 @@ services:
     # build: .
 
     # The image config can be used for running against published images
-    image: artelanetwork/rollkit:latest
+    image: gupadhyaya/artella-rollkit:latest
+    #artelanetwork/rollkit:a629152
 
     # Used for targetting localhost as if you were outside the container
     network_mode: host
@@ -20,9 +21,17 @@ services:
     command: rollkit start --rollkit.aggregator --rollkit.da_address http://localhost:7980
     depends_on:
       - local-da
+      - local-sequencer
 
   local-da:
     image: ghcr.io/rollkit/local-da:v0.2.1
     container_name: local-da
     ports:
       - "7980:7980"
+
+  local-sequencer:
+    image: gupadhyaya/local-sequencer:latest
+    container_name: local-sequencer
+    command: local-sequencer -listen-all -rollup-id "artroll_11820-1" 
+    ports:
+      - "50051:50051"
