--- a/compose.yaml
+++ b/compose.yaml
@@ -1,28 +1,7 @@
-# Docker Compose is used for spinning up the local-da docker container along with the GM container.
+# Docker Compose is used for spinning up the local-da docker container along with local sequencer 
 
 version: "3.8"
 services:
-  artroll:
-    container_name: artroll
-    # The build config can be used for debugging and testing changes to the Dockerfile
-    # build: .
-
-    # The image config can be used for running against published images
-    image: gupadhyaya/artella-rollkit:latest
-    #artelanetwork/rollkit:a629152
-
-    # Used for targetting localhost as if you were outside the container
-    network_mode: host
-
-    # Always pull the latest image
-    pull_policy: always
-
-    # The command config is used for launching the GM rollup once the Docker container is running
-    command: rollkit start --rollkit.aggregator --rollkit.da_address http://localhost:7980
-    depends_on:
-      - local-da
-      - local-sequencer
-
   local-da:
     image: ghcr.io/rollkit/local-da:v0.2.1
     container_name: local-da
